--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy-dev": "firebase deploy --only functions --project dev",
+    "deploy-prod": "firebase deploy --only functions --project prod",
     "logs": "firebase functions:log"
   },
   "dependencies": {
