--- a/functions/package.json
+++ b/functions/package.json
@@ -6,11 +6,19 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy-dev": "firebase deploy --only functions --project dev",
+    "deploy-prod": "firebase deploy --only functions --project prod",
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "actions-on-google": "^2.5.0",
+    "camelcase": "^5.0.0",
+    "cors": "^2.8.5",
+    "dialogflow": "^0.7.0",
+    "dialogflow-fulfillment": "dialogflow/dialogflow-fulfillment-nodejs",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "glob": "^7.1.3"
   },
   "private": true
 }
