--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,11 @@
     "dialogflow-fulfillment": "dialogflow/dialogflow-fulfillment-nodejs",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
-    "glob": "^7.1.3"
+    "glob": "^7.1.3",
+    "validator": "^10.11.0"
+  },
+  "engines": {
+    "node": "8"
   },
   "private": true
 }
