--- a/interface/package.json
+++ b/interface/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cambriasolutions/chatframe": "^1.9.0",
+    "latest": "^0.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "@cambriasolutions/chatframe": "1.7.14"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
