--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,10 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "deploy-dev": "firebase deploy --only functions --project dev",
+    "deploy-dev-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
     "deploy-prod": "firebase deploy --only functions --project prod",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest"
   },
   "dependencies": {
     "actions-on-google": "^2.5.0",
@@ -18,7 +20,15 @@
     "dialogflow-fulfillment": "dialogflow/dialogflow-fulfillment-nodejs",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
-    "glob": "^7.1.3"
+    "glob": "^7.1.3",
+    "lodash": "^4.17.11",
+    "validator": "^10.11.0"
   },
-  "private": true
+  "engines": {
+    "node": "8"
+  },
+  "private": true,
+  "devDependencies": {
+    "jest": "^23.6.0"
+  }
 }
