--- a/functions/package.json
+++ b/functions/package.json
@@ -21,8 +21,11 @@
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
     "glob": "^7.1.3",
-    "validator": "^10.11.0",
     "lodash": "^4.17.11",
+    "validator": "^10.11.0"
+  },
+  "engines": {
+    "node": "8"
   },
   "engines": {
     "node": "8"
