--- a/interface/package.json
+++ b/interface/package.json
@@ -13,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-dev": "firebase deploy --only hosting --project dev",
+    "deploy-prod": "firebase deploy --only hosting --project prod"
   },
   "eslintConfig": {
     "extends": "react-app"
