--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,9 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "deploy-dev": "firebase deploy --only functions --project dev",
+    "deploy-stage": "firebase deploy --only functions --project stage",
     "deploy-dev-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
+    "deploy-stage-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project stage",
     "deploy-prod": "firebase deploy --only functions --project prod",
     "logs": "firebase functions:log",
     "test": "jest"
