--- a/functions/package.json
+++ b/functions/package.json
@@ -20,10 +20,14 @@
     "cors": "^2.8.5",
     "dialogflow": "^0.7.0",
     "dialogflow-fulfillment": "dialogflow/dialogflow-fulfillment-nodejs",
+    "dotenv": "^6.2.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
+    "geolib": "^2.0.24",
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
+    "node-fetch": "^2.3.0",
+    "url": "^0.11.0",
     "validator": "^10.11.0"
   },
   "engines": {
