--- a/functions/package.json
+++ b/functions/package.json
@@ -7,8 +7,10 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "deploy-dev": "firebase deploy --only functions --project dev",
+    "deploy-dev-beta": "firebase deploy --only functions --project dev-beta",
     "deploy-stage": "firebase deploy --only functions --project stage",
     "deploy-dev-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
+    "deploy-dev-beta-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev-beta",
     "deploy-stage-dialogflow": "firebase deploy --only functions:dialogflowFirebaseFulfillment --project stage",
     "deploy-prod": "firebase deploy --only functions --project prod",
     "logs": "firebase functions:log",
