--- a/functions/package.json
+++ b/functions/package.json
@@ -29,6 +29,7 @@
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
+    "request-promise": "^4.2.4",
     "url": "^0.11.0",
     "validator": "^10.11.0"
   },
