--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "node-fetch": "^2.3.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
