--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.2.0",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
