--- a/functions/package.json
+++ b/functions/package.json
@@ -17,11 +17,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "actions-on-google": "^2.5.0",
-    "camelcase": "^5.0.0",
+    "actions-on-google": "^2.6.0",
+    "camelcase": "^5.2.0",
     "cors": "^2.8.5",
     "dialogflow": "^0.7.0",
-    "dialogflow-fulfillment": "dialogflow/dialogflow-fulfillment-nodejs",
+    "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^6.2.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
@@ -29,8 +29,8 @@
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "url": "^0.11.0",
     "validator": "^10.11.0"
   },
   "engines": {
