--- a/functions/package.json
+++ b/functions/package.json
@@ -21,7 +21,7 @@
     "camelcase": "^5.2.0",
     "cors": "^2.8.5",
     "dialogflow": "^0.7.0",
-    "dialogflow-fulfillment": "^0.6.1",
+    "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^6.2.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0",
@@ -32,9 +32,6 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "validator": "^10.11.0"
-  },
-  "engines": {
-    "node": "8"
   },
   "private": true,
   "devDependencies": {
