--- a/functions/package.json
+++ b/functions/package.json
@@ -27,6 +27,7 @@
     "firebase-functions": "^2.1.0",
     "geolib": "^2.0.24",
     "glob": "^7.1.3",
+    "libphonenumber-js": "^1.7.15",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
     "request": "^2.88.0",
