--- a/functions/package.json
+++ b/functions/package.json
@@ -25,7 +25,6 @@
     "dotenv": "^8.0.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
-    "geolib": "^3.0.3",
     "glob": "^7.1.4",
     "libphonenumber-js": "^1.7.18",
     "lodash": "^4.17.11",
@@ -33,6 +32,9 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "validator": "^11.0.0"
+  },
+  "engines": {
+    "node": "8"
   },
   "private": true,
   "devDependencies": {
