--- a/functions/package.json
+++ b/functions/package.json
@@ -25,16 +25,17 @@
     "dotenv": "^8.0.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
+    "firebase-tools": "^7.0.1",
     "glob": "^7.1.4",
+    "grpc": "^1.21.1",
     "libphonenumber-js": "^1.7.18",
     "lodash": "^4.17.11",
     "node-fetch": "^2.6.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "save": "^2.4.0",
+    "save-dev": "^2.0.0",
     "validator": "^11.0.0"
-  },
-  "engines": {
-    "node": "8"
   },
   "private": true,
   "devDependencies": {
