remove serve-local script

--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase serve --only functions --port=9000",
-    "serve-local": "firebase serve --only functions --port=9000 & ngrok http 9000",
+    "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "node retrieveCoordinates && firebase deploy --only functions",
