--- a/functions/package.json
+++ b/functions/package.json
@@ -26,6 +26,7 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
     "glob": "^7.1.4",
+    "grpc": "^1.21.1",
     "libphonenumber-js": "^1.7.18",
     "lodash": "^4.17.11",
     "node-fetch": "^2.6.0",
@@ -38,6 +39,7 @@
   },
   "private": true,
   "devDependencies": {
+    "firebase-functions-test": "^0.1.6",
     "jest": "^24.8.0"
   }
 }
