--- a/functions/package.json
+++ b/functions/package.json
@@ -39,6 +39,7 @@
   },
   "private": true,
   "devDependencies": {
+    "firebase-functions-test": "^0.1.6",
     "jest": "^24.8.0"
   },
   "engines": {
