--- a/functions/package.json
+++ b/functions/package.json
@@ -31,6 +31,7 @@
     "libphonenumber-js": "^1.7.18",
     "lodash": "^4.17.11",
     "node-fetch": "^2.6.0",
+    "parse-address": "^1.1.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "save": "^2.4.0",
