--- a/functions/package.json
+++ b/functions/package.json
@@ -5,19 +5,12 @@
     "serve": "firebase serve --only functions --port=9000",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "node retrieveCoordinates && firebase deploy --only functions",
-    "deploy-dev": "node retrieveCoordinates && firebase deploy --only functions --project dev",
-    "deploy-dev-beta": "node retrieveCoordinates && firebase deploy --only functions --project dev-beta",
-    "deploy-stage": "node retrieveCoordinates && firebase deploy --only functions --project stage",
-    "deploy-dev-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
-    "deploy-dev-beta-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev-beta",
-    "deploy-stage-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project stage",
-    "deploy-prod": "node retrieveCoordinates && firebase deploy --only functions --project prod",
+    "deploy-anish": "firebase deploy --only functions --project anish",
     "logs": "firebase functions:log",
     "test": "jest"
   },
   "dependencies": {
-    "actions-on-google": "^2.6.0",
+    "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
     "dialogflow": "^0.9.1",
@@ -29,7 +22,7 @@
     "glob": "^7.1.4",
     "grpc": "^1.21.1",
     "libphonenumber-js": "^1.7.18",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "parse-address": "^1.1.2",
     "request": "^2.88.0",
