--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,14 @@
     "serve": "firebase serve --only functions --port=9000",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy-anish": "firebase deploy --only functions --project anish",
+    "deploy": "node retrieveCoordinates && firebase deploy --only functions",
+    "deploy-dev": "node retrieveCoordinates && firebase deploy --only functions --project dev",
+    "deploy-dev-beta": "node retrieveCoordinates && firebase deploy --only functions --project dev-beta",
+    "deploy-stage": "node retrieveCoordinates && firebase deploy --only functions --project stage",
+    "deploy-dev-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev",
+    "deploy-dev-beta-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project dev-beta",
+    "deploy-stage-dialogflow": "node retrieveCoordinates && firebase deploy --only functions:dialogflowFirebaseFulfillment --project stage",
+    "deploy-prod": "node retrieveCoordinates && firebase deploy --only functions --project prod",
     "logs": "firebase functions:log",
     "test": "jest"
   },
