--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  deploy_functions:
+  deploy_dev_functions:
     docker:
       - image: circleci/node:10.15.0
     working_directory: ~/repo/
@@ -11,19 +11,19 @@ jobs:
       - run:
           name: 'Add env variables and deploy'
           command: |
-            export GOOGLE_MAPS_KEY=$GOOGLE_MAPS_KEY
-            export SERVICE_DESK_KEY=$SERVICE_DESK_KEY
-            export SERVICE_DESK_URI=$SERVICE_DESK_URI
-            export SERVICE_DESK_ID=$SERVICE_DESK_ID
-            export REQUEST_TYPE_ID=$REQUEST_TYPE_ID
-            export SERVICE_DESK_ENV=$SERVICE_DESK_ENV
+            export GOOGLE_MAPS_KEY=$DEV_GOOGLE_MAPS_KEY
+            export SERVICE_DESK_KEY=$DEV_SERVICE_DESK_KEY
+            export SERVICE_DESK_URI=$DEV_SERVICE_DESK_URI
+            export SERVICE_DESK_ID=$DEV_SERVICE_DESK_ID
+            export REQUEST_TYPE_ID=$DEV_REQUEST_TYPE_ID
+            export SERVICE_DESK_ENV=$DEV_SERVICE_DESK_ENV
       - run: sudo npm install -g firebase-tools
-      - run: firebase deploy -P $FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
 workflows:
   version: 2
   build_deploy:
     jobs:
-      - deploy_functions:
+      - deploy_dev_functions:
           filters:
             branches:
               only:
