--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       - run:
           name: 'Add env variables and deploy'
           command: 
-            cd functions && echo "
-            GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
+            cd functions && echo 
+            "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
             
             SERVICE_DESK_KEY=${DEV_SERVICE_DESK_KEY}
             
