--- a/functions/package.json
+++ b/functions/package.json
@@ -17,12 +17,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.0.0",
     "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
     "dialogflow": "^0.9.1",
     "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^8.0.0",
+    "firebase": "^7.2.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.2",
     "firebase-tools": "^7.0.1",
