--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,11 @@ jobs:
             SERVICE_DESK_ENV=${DEV_SERVICE_DESK_ENV}
 
             ANALYTICS_URI=${DEV_ANALYTICS_URI}" > .env
+       - run:
+          name: 'Run geocode script'
+          command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: node retrieveCoordinates && firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_stage_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -60,8 +63,11 @@ jobs:
             SERVICE_DESK_ENV=${STAGE_SERVICE_DESK_ENV}
 
             ANALYTICS_URI=${STAGE_ANALYTICS_URI}" > .env
+       - run:
+           name: 'Run geocode script'
+           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: node retrieveCoordinates && firebase deploy -P $STAGE_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $STAGE_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_prod_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -76,7 +82,7 @@ jobs:
           paths:
             - functions/node_modules
       - run:
-          name: 'Add env variables and deploy'
+          name: 'Add env variables'
           command: cd functions && echo
             "GOOGLE_MAPS_KEY=${PROD_GOOGLE_MAPS_KEY}
 
@@ -91,8 +97,11 @@ jobs:
             SERVICE_DESK_ENV=${PROD_SERVICE_DESK_ENV}
 
             ANALYTICS_URI=${PROD_ANALYTICS_URI}" > .env
+      - run:
+          name: 'Run geocode script'
+          command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: node retrieveCoordinates && firebase deploy -P $PROD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $PROD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
 workflows:
   version: 2
   build_deploy:
