--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
           name: 'Run geocode script'
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: node retrieveCoordinates && firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_stage_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -67,7 +67,7 @@ jobs:
           name: 'Run geocode script'
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: node retrieveCoordinates && firebase deploy -P $STAGE_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $STAGE_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_prod_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -101,7 +101,7 @@ jobs:
           name: 'Run geocode script'
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: node retrieveCoordinates && firebase deploy -P $PROD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $PROD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
 workflows:
   version: 2
   build_deploy:
