--- a/functions/package.json
+++ b/functions/package.json
@@ -36,7 +36,8 @@
     "request-promise": "^4.2.4",
     "save": "^2.4.0",
     "save-dev": "^2.0.0",
-    "validator": "^11.0.0"
+    "validator": "^11.0.0",
+    "@bit/cambria-solutioncenter.dialogflow.back": "file:./components/back"
   },
   "private": true,
   "devDependencies": {
@@ -45,5 +46,10 @@
   },
   "engines": {
     "node": "8"
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
