--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase serve --only functions",
+    "serve": "firebase serve --only functions --port=9000",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "node retrieveCoordinates && firebase deploy --only functions",
@@ -17,25 +17,33 @@
     "test": "jest"
   },
   "dependencies": {
-    "actions-on-google": "^2.6.0",
+    "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
     "dialogflow": "^0.9.1",
     "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^8.0.0",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^2.3.1",
-    "geolib": "^3.0.3",
+    "firebase-functions": "^3.0.2",
+    "firebase-tools": "^7.0.1",
     "glob": "^7.1.4",
+    "grpc": "^1.23.1",
     "libphonenumber-js": "^1.7.18",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
+    "parse-address": "^1.1.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "save": "^2.4.0",
+    "save-dev": "^2.0.0",
     "validator": "^11.0.0"
   },
   "private": true,
   "devDependencies": {
+    "firebase-functions-test": "^0.1.6",
     "jest": "^24.8.0"
+  },
+  "engines": {
+    "node": "8"
   }
 }
