--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/automl": "^1.7.3",
     "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
