--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dialogflow": "^0.12.2",
     "dotenv": "^6.2.0",
+    "firebase-admin": "^8.7.0",
     "node-fetch": "^2.3.0",
     "parse-address": "^1.1.2",
     "request": "^2.88.0",
