--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ typings/
 .next
 agent/.DS_Store
 functions/serviceAccount.json
+functions/dev-beta-service-key.json
+scripts/dev-beta-service-key.json
