--- a/functions/package.json
+++ b/functions/package.json
@@ -21,6 +21,7 @@
     "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.7.0",
     "dialogflow": "^0.9.1",
     "dialogflow-fulfillment": "github:dialogflow/dialogflow-fulfillment-nodejs",
     "dotenv": "^8.0.0",
@@ -30,6 +31,7 @@
     "firebase-tools": "^7.0.1",
     "glob": "^7.1.4",
     "grpc": "^1.23.1",
+    "jszip": "^3.2.2",
     "libphonenumber-js": "^1.7.18",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
