--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bit/cambria-solutioncenter.dialogflow.back-intent": "file:components/back-intent",
     "@google-cloud/automl": "^1.7.3",
     "actions-on-google": "^2.12.0",
     "camelcase": "^5.3.1",
@@ -35,8 +36,7 @@
     "parse-address": "^1.1.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "validator": "^11.0.0",
-    "@bit/cambria-solutioncenter.dialogflow.back": "file:./components/back"
+    "validator": "^11.0.0"
   },
   "private": true,
   "devDependencies": {
