--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,7 @@ typings/
 .next
 agent/.DS_Store
 functions/serviceAccount.json
+functions/dev-beta-service-key.json
+scripts/keys/
 functions/analyticsKey.json
+
