--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,17 +76,17 @@ jobs:
 
             ANALYTICS_URI=${STAGE_ANALYTICS_URI}
 
-            AUTOML_PROJECT=${DEV_AUTOML_PROJECT}
+            AUTOML_PROJECT=${STAGE_AUTOML_PROJECT}
 
-            AUTOML_LOCATION=${DEV_AUTOML_LOCATION}
+            AUTOML_LOCATION=${STAGE_AUTOML_LOCATION}
 
-            AUTOML_SM_MODEL=${DEV_AUTOML_SM_MODEL}
+            AUTOML_SM_MODEL=${STAGE_AUTOML_SM_MODEL}
 
-            AUTOML_CAT_MODEL=${DEV_AUTOML_CAT_MODEL}
+            AUTOML_CAT_MODEL=${STAGE_AUTOML_CAT_MODEL}
 
-            AUTOML_PRIVATE_KEY=${DEV_AUTOML_PRIVATE_KEY}
+            AUTOML_PRIVATE_KEY=${STAGE_AUTOML_PRIVATE_KEY}
 
-            AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
+            AUTOML_CLIENT_EMAIL=${STAGE_AUTOML_CLIENT_EMAIL}" > .env
       - run:
           name: 'Run geocode script'
           command: cd functions && node retrieveCoordinates
