Modifying the mdhs-csa yaml config for continuous deployment. Now will deploy to isd environment.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,53 @@ jobs:
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+  deploy_isd_functions:
+    docker:
+      - image: circleci/node:10.15.0
+    working_directory: ~/repo/
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - run: cd functions && npm install
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - functions/node_modules
+      - run:
+          name: 'Add env variables and deploy'
+          command: cd functions && echo
+            "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
+
+            SERVICE_DESK_KEY=${DEV_SERVICE_DESK_KEY}
+
+            SERVICE_DESK_URI=${DEV_SERVICE_DESK_URI}
+
+            SERVICE_DESK_ID=${DEV_SERVICE_DESK_ID}
+
+            REQUEST_TYPE_ID=${DEV_REQUEST_TYPE_ID}
+
+            SERVICE_DESK_ENV=${DEV_SERVICE_DESK_ENV}
+
+            ANALYTICS_URI=${DEV_ANALYTICS_URI}
+
+            AUTOML_PROJECT=${DEV_AUTOML_PROJECT}
+
+            AUTOML_LOCATION=${DEV_AUTOML_LOCATION}
+
+            AUTOML_SM_MODEL=${DEV_AUTOML_SM_MODEL}
+
+            AUTOML_CAT_MODEL=${DEV_AUTOML_CAT_MODEL}
+
+            AUTOML_PRIVATE_KEY=${DEV_AUTOML_PRIVATE_KEY}
+
+            AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
+      - run:
+          name: 'Run geocode script'
+          command: cd functions && node retrieveCoordinates
+      - run: sudo npm install -g firebase-tools
+      - run: firebase deploy -P $ISD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+  
   deploy_stage_functions:
     docker:
       - image: circleci/node:10.15.0
@@ -147,6 +194,11 @@ workflows:
             branches:
               only:
                 - development
+      - deploy_isd_functions:
+          filters:
+            branches:
+              only:
+                - isd
       - deploy_stage_functions:
           filters:
             branches:
