--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,30 +296,42 @@ workflows:
   version: 2
   build_deploy:
     jobs:
-      - deploy_dev_functions:
-          requires: 
-            - deploy_dev_dialogflow_agent
+      - deploy_dev_dialogflow_agent:
           filters:
             branches:
               only:
                 - development
-      - deploy_isd_functions:
-          requires: 
-            - deploy_isd_dialogflow_agent
+      - deploy_dev_functions:
+          filters:
+            branches:
+              only:
+                - development
+      - deploy_isd_dialogflow_agent:
           filters:
             branches:
               only:
                 - isd
-      - deploy_stage_functions:
-          requires: 
-            - deploy_stage_dialogflow_agent
+      - deploy_isd_functions:
+          filters:
+            branches:
+              only:
+                - isd
+      - deploy_stage_dialogflow_agent:
           filters:
             branches:
               only:
                 - stage
+      - deploy_stage_functions:
+          filters:
+            branches:
+              only:
+                - stage
+      - deploy_prod_dialogflow_agent:
+          filters:
+            branches:
+              only:
+                - master
       - deploy_prod_functions:
-          requires: 
-            - deploy_prod_dialogflow_agent
           filters:
             branches:
               only:
