--- a/scripts/package.json
+++ b/scripts/package.json
@@ -16,6 +16,7 @@
     "jszip": "^3.4.0",
     "node-fetch": "^2.3.0",
     "parse-address": "^1.1.2",
+    "uuid": "^3.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
