--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  deploy_dev_dialogflow_agent:
+  deploy_dev_csa_dialogflow_agent:
     docker:
       - image: circleci/node:10.15.0
     working_directory: ~/repo/
@@ -36,7 +36,79 @@ jobs:
       - run:
           name: 'Populate Firestore'
           command: cd scripts && node populateFirestore
-  deploy_dev_functions:
+  deploy_dev_snap_dialogflow_agent:
+    docker:
+      - image: circleci/node:10.15.0
+    working_directory: ~/repo/
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - run: cd scripts && npm install
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - scripts/node_modules
+      - run:
+          name: 'Add env variables'
+          command: cd scripts && echo
+            "AGENT_PROJECT=${DEV_AGENT_PROJECT}
+
+            AGENT_PRIVATE_KEY=${DEV_AGENT_PRIVATE_KEY}
+
+            AGENT_CLIENT_EMAIL=${DEV_AGENT_CLIENT_EMAIL}
+
+            GOOGLE_APPLICATION_CREDENTIALS=./mdhs-csa-key.json" > .env
+      - run:
+          name: 'Add json key file'
+          command: cd scripts && echo
+            "${DEV_MDHS_SNAP_KEY_JSON}" > mdhs-csa-key.json
+      - run:
+          name: 'Agent configuration'
+          command: cd agent && mv agent.dev.json agent.json
+      - run:
+          name: 'Import to Dev DialogFlow'
+          command: cd scripts && node importDialogFlow
+      - run:
+          name: 'Populate Firestore'
+          command: cd scripts && node populateFirestore
+  deploy_dev_dispatcher_dialogflow_agent:
+    docker:
+      - image: circleci/node:10.15.0
+    working_directory: ~/repo/
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - run: cd scripts && npm install
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - scripts/node_modules
+      - run:
+          name: 'Add env variables'
+          command: cd scripts && echo
+            "AGENT_PROJECT=${DEV_AGENT_PROJECT}
+
+            AGENT_PRIVATE_KEY=${DEV_AGENT_PRIVATE_KEY}
+
+            AGENT_CLIENT_EMAIL=${DEV_AGENT_CLIENT_EMAIL}
+
+            GOOGLE_APPLICATION_CREDENTIALS=./mdhs-csa-key.json" > .env
+      - run:
+          name: 'Add json key file'
+          command: cd scripts && echo
+            "${DEV_MDHS_DISPATCHER_KEY_JSON}" > mdhs-csa-key.json
+      - run:
+          name: 'Agent configuration'
+          command: cd agent && mv agent.dev.json agent.json
+      - run:
+          name: 'Import to Dev DialogFlow'
+          command: cd scripts && node importDialogFlow
+      - run:
+          name: 'Populate Firestore'
+          command: cd scripts && node populateFirestore
+  deploy_dev_csa_functions:
     docker:
       - image: circleci/node:10.15.0
     working_directory: ~/repo/
@@ -81,7 +153,99 @@ jobs:
           name: 'Run geocode script'
           command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
-      - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+      - run: firebase deploy -P $DEV_CSA_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+  deploy_dev_snap_functions:
+    docker:
+      - image: circleci/node:10.15.0
+    working_directory: ~/repo/
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - run: cd functions && npm install
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - functions/node_modules
+      - run:
+          name: 'Add env variables and deploy'
+          command: cd functions && echo
+            "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
+
+            SERVICE_DESK_KEY=${DEV_SERVICE_DESK_KEY}
+
+            SERVICE_DESK_URI=${DEV_SERVICE_DESK_URI}
+
+            SERVICE_DESK_ID=${DEV_SERVICE_DESK_ID}
+
+            REQUEST_TYPE_ID=${DEV_REQUEST_TYPE_ID}
+
+            SERVICE_DESK_ENV=${DEV_SERVICE_DESK_ENV}
+
+            ANALYTICS_URI=${DEV_ANALYTICS_URI}
+
+            AUTOML_PROJECT=${DEV_AUTOML_PROJECT}
+
+            AUTOML_LOCATION=${DEV_AUTOML_LOCATION}
+
+            AUTOML_SM_MODEL=${DEV_AUTOML_SM_MODEL}
+
+            AUTOML_CAT_MODEL=${DEV_AUTOML_CAT_MODEL}
+
+            AUTOML_PRIVATE_KEY=${DEV_AUTOML_PRIVATE_KEY}
+
+            AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
+      - run:
+          name: 'Run geocode script'
+          command: cd functions && node retrieveCoordinates
+      - run: sudo npm install -g firebase-tools
+      - run: firebase deploy -P $DEV_SNAP_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
+  deploy_dev_dispatcher_functions:
+    docker:
+      - image: circleci/node:10.15.0
+    working_directory: ~/repo/
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      - run: cd functions && npm install
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - functions/node_modules
+      - run:
+          name: 'Add env variables and deploy'
+          command: cd functions && echo
+            "GOOGLE_MAPS_KEY=${DEV_GOOGLE_MAPS_KEY}
+
+            SERVICE_DESK_KEY=${DEV_SERVICE_DESK_KEY}
+
+            SERVICE_DESK_URI=${DEV_SERVICE_DESK_URI}
+
+            SERVICE_DESK_ID=${DEV_SERVICE_DESK_ID}
+
+            REQUEST_TYPE_ID=${DEV_REQUEST_TYPE_ID}
+
+            SERVICE_DESK_ENV=${DEV_SERVICE_DESK_ENV}
+
+            ANALYTICS_URI=${DEV_ANALYTICS_URI}
+
+            AUTOML_PROJECT=${DEV_AUTOML_PROJECT}
+
+            AUTOML_LOCATION=${DEV_AUTOML_LOCATION}
+
+            AUTOML_SM_MODEL=${DEV_AUTOML_SM_MODEL}
+
+            AUTOML_CAT_MODEL=${DEV_AUTOML_CAT_MODEL}
+
+            AUTOML_PRIVATE_KEY=${DEV_AUTOML_PRIVATE_KEY}
+
+            AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
+      - run:
+          name: 'Run geocode script'
+          command: cd functions && node retrieveCoordinates
+      - run: sudo npm install -g firebase-tools
+      - run: firebase deploy -P $DEV_DISPATCHER_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN  
   deploy_isd_dialogflow_agent:
     docker:
       - image: circleci/node:10.15.0
@@ -332,12 +496,32 @@ workflows:
   version: 2
   build_deploy:
     jobs:
-      - deploy_dev_dialogflow_agent:
+      - deploy_dev_csa_dialogflow_agent:
           filters:
             branches:
               only:
                 - development
-      - deploy_dev_functions:
+      - deploy_dev_snap_dialogflow_agent:
+          filters:
+            branches:
+              only:
+                - development
+      - deploy_dev_dispatcher_dialogflow_agent:
+          filters:
+            branches:
+              only:
+                - development
+      - deploy_dev_csa_functions:
+          filters:
+            branches:
+              only:
+                - development
+      - deploy_dev_snap_functions:
+          filters:
+            branches:
+              only:
+                - development
+      - deploy_dev_dispatcher_functions:
           filters:
             branches:
               only:
