--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
             AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
       - run:
           name: 'Run geocode script'
-          command: cd scripts && node retrieveCoordinates
+          command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $DEV_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_isd_dialogflow_agent:
@@ -161,7 +161,7 @@ jobs:
             AUTOML_CLIENT_EMAIL=${DEV_AUTOML_CLIENT_EMAIL}" > .env
       - run:
           name: 'Run geocode script'
-          command: cd scripts && node retrieveCoordinates
+          command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $ISD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_stage_dialogflow_agent:
@@ -243,7 +243,7 @@ jobs:
             AUTOML_CLIENT_EMAIL=${STAGE_AUTOML_CLIENT_EMAIL}" > .env
       - run:
           name: 'Run geocode script'
-          command: cd scripts && node retrieveCoordinates
+          command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $STAGE_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
   deploy_prod_dialogflow_agent:
@@ -325,7 +325,7 @@ jobs:
             AUTOML_CLIENT_EMAIL=${PROD_AUTOML_CLIENT_EMAIL}" > .env
       - run:
           name: 'Run geocode script'
-          command: cd scripts && node retrieveCoordinates
+          command: cd functions && node retrieveCoordinates
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy -P $PROD_FIREBASE_PROJECT_ID --only functions --token $FIREBASE_DEPLOY_TOKEN
 workflows:
